k8s/ingress-account.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: modernbank-account-ingress
    namespace: modernbank
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internal
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/group.name: modernbank
        alb.ingress.kubernetes.io/group.order: "1"
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-path: "/modernbank/account/actuator"
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/success-codes: "200"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
        alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /modernbank/account
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-account
                            port:
                                number: 8081
