k8s/ingress-cqrs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: modernbank-cqrs-ingress
    namespace: modernbank
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internal
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/group.name: modernbank
        alb.ingress.kubernetes.io/group.order: "4"
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/success-codes: "200"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /modernbank/cqrs
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-cqrs
                            port:
                                number: 8084
