k8s/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: modernbank-user-ingress
    namespace: modernbank
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internal
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/group.name: modernbank
        alb.ingress.kubernetes.io/group.order: "7"
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-path: "/username/HealthCheck"
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/success-codes: "200"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /modernbank/user
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-user
                            port:
                                number: 8091
