k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: modernbank-ingress
    namespace: modernbank
    # annotations:
    #   nginx.ingress.kubernetes.io/rewrite-target: /
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internal
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
        alb.ingress.kubernetes.io/healthy-threshold-count: "2"
        alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
        
        # Account Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.account: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.account: "8081"
        
        # B2BT Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.b2bt: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.b2bt: "8082"
        
        # Customer Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.customer: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.customer: "8083"
        
        # CQRS Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.cqrs: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.cqrs: "8084"
        
        # Transfer Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.transfer: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.transfer: "8085"
        
        # Product Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.product: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.product: "8086"
        
        # User Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.user: "/username/healthCheck"
        alb.ingress.kubernetes.io/healthcheck-port.user: "8091"
        
        # Main Service Health Check
        alb.ingress.kubernetes.io/healthcheck-path.main: "/actuator/health"
        alb.ingress.kubernetes.io/healthcheck-port.main: "8080"
        alb.ingress.kubernetes.io/actions.account-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-account","servicePort":"8081"}]}}
        alb.ingress.kubernetes.io/actions.b2bt-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-b2bt","servicePort":"8082"}]}}
        alb.ingress.kubernetes.io/actions.customer-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-customer","servicePort":"8083"}]}}
        alb.ingress.kubernetes.io/actions.cqrs-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-cqrs","servicePort":"8084"}]}}
        alb.ingress.kubernetes.io/actions.transfer-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-transfer","servicePort":"8085"}]}}
        alb.ingress.kubernetes.io/actions.product-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-product","servicePort":"8086"}]}}
        alb.ingress.kubernetes.io/actions.user-health: |
            {"type":"forward","forwardConfig":{"targetGroups":[{"serviceName":"modernbank-user","servicePort":"8091"}]}}

spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /modernbank/account
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-account
                            port:
                                number: 8081
                  - path: /modernbank/b2bt
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-b2bt
                            port:
                                number: 8082
                  - path: /modernbank/customer
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-customer
                            port:
                                number: 8083
                  - path: /modernbank/cqrs
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-cqrs
                            port:
                                number: 8084
                  - path: /modernbank/transfer
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-transfer
                            port:
                                number: 8085
                  - path: /modernbank/product
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-product
                            port:
                                number: 8086
                  - path: /modernbank/user
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank-user
                            port:
                                number: 8091
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: modernbank
                            port:
                                number: 8080
